@@ -14,7 +14,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,7 +31,7 @@ public class TimeDataService
         timeDataRepository.save(TimeData.builder()
                 .userName(dto.userName())
                 .imageTimes(dto.imageTimes())
-                .slideId(dto.slideId())
+                .slideId(UUID.fromString(dto.slideId()))
                 .userIp(dto.userIp())
                 .companyId(dto.companyId())
                 .status(EStatus.ACTIVE)
@@ -44,48 +46,58 @@ public class TimeDataService
         return timeDataRepository.findAllDistinctUsernames(manager.getCompanyId());
     }
 
-    public List<Long> getUsernamesSlides(String username)
+    public List<String> getUsernamesSlides(String username)
     {
-        return timeDataRepository.findAllUsernamesSlides(username);
+        List<String> slideIds = new ArrayList<>();
+        timeDataRepository.findAllUsernamesSlides(username).forEach(slideId -> {
+            slideIds.add(String.valueOf(slideId));
+        });
+        return slideIds;
     }
 
-    public List<TimeDatasResponseDto> getAllByUsernameAndSlideId(TimeDataGetRequestDto dto)
-    {
+    public List<TimeDatasResponseDto> getAllByUsernameAndSlideId(TimeDataGetRequestDto dto) {
         String email = UserInfoSecurityContext.getUserInfoFromSecurityContext();
-        User manager = userService.findByEmail(email).orElseThrow(() -> new HumanResourcesAppException(ErrorType.USER_NOT_FOUND));
+        User manager = userService.findByEmail(email)
+                .orElseThrow(() -> new HumanResourcesAppException(ErrorType.USER_NOT_FOUND));
 
-        List<TimeData> timeDatas = timeDataRepository.findAllByUserNameAndSlideIdAndCompanyId(dto.userName(), dto.slideId(), manager.getCompanyId());
+        List<TimeData> timeDatas = timeDataRepository.findAllByUserNameAndSlideIdAndCompanyId(
+                dto.userName(),
+                UUID.fromString(dto.slideId()),
+                manager.getCompanyId()
+        );
 
-        // Yeni bir harita oluşturarak, her bir sayfa numarası için toplam zamanı hesaplayalım
+        // Her sayfa için toplam zamanı ve toplam ziyaret sayısını hesaplayacak haritalar oluşturuyoruz
         Map<String, Double> combinedImageTimes = new HashMap<>();
+        Map<String, Integer> pageVisitCounts = new HashMap<>();
 
-        timeDatas.forEach(timeData ->
-        {
-            timeData.getImageTimes().forEach((pageNumber, timeSpent) ->
-            {
+        timeDatas.forEach(timeData -> {
+            timeData.getImageTimes().forEach((pageNumber, timeSpent) -> {
                 combinedImageTimes.merge(pageNumber, timeSpent, Double::sum);
+                pageVisitCounts.merge(pageNumber, 1, Integer::sum); // Sayfa ziyareti sayısını artırıyoruz
             });
         });
 
-        // Yeni TimeData nesnesi oluşturup, topladığımız değerleri bu nesneye atayabiliriz
+        // Yeni TimeData nesnesi oluşturuyoruz
         TimeData combinedTimeData = TimeData.builder()
                 .userName(dto.userName())
-                .slideId(dto.slideId())
+                .slideId(UUID.fromString(dto.slideId()))
                 .imageTimes(combinedImageTimes)
-                .userIp(timeDatas.getFirst().getUserIp())
-                .createdAt(timeDatas.getFirst().getCreatedAt())
-                .updatedAt(timeDatas.getFirst().getUpdatedAt())
+                .userIp(timeDatas.get(0).getUserIp())
+                .createdAt(timeDatas.get(0).getCreatedAt())
+                .updatedAt(timeDatas.get(0).getUpdatedAt())
                 .build();
 
+        // Sonuçları içeren DTO listesini oluşturuyoruz
         List<TimeDatasResponseDto> imageTimeDtos = new ArrayList<>();
         AtomicLong id = new AtomicLong(1L);
-        // Her bir TimeData nesnesi için
-        combinedImageTimes.forEach((pageNumber, timeSpent) ->
-        {
+
+        combinedImageTimes.forEach((pageNumber, timeSpent) -> {
+            int visitCount = pageVisitCounts.get(pageNumber); // Sayfa ziyareti sayısını alıyoruz
             imageTimeDtos.add(new TimeDatasResponseDto(
                     id.getAndIncrement(),
                     combinedTimeData.getUserName(),
-                    combinedTimeData.getSlideId(),
+                    visitCount, // Sayfa ziyareti sayısını burada kullanıyoruz
+                    combinedTimeData.getSlideId().toString(),
                     pageNumber,
                     timeSpent,
                     combinedTimeData.getUserIp(),
@@ -94,15 +106,16 @@ public class TimeDataService
             ));
         });
 
-        // Tek bir birleşik TimeData nesnesi dönebilir veya isteğe bağlı olarak listeye ekleyip dönebilirsiniz
+        // Sonuçları sayfa numarasına göre sıralayıp döndürüyoruz
         return imageTimeDtos.stream()
                 .sorted(Comparator.comparingInt(imgdto -> Integer.parseInt(imgdto.pageNumber())))
                 .collect(Collectors.toList());
     }
 
 
-    public void deleteTimeDataBySlideId(Long id)
+
+    public void deleteTimeDataBySlideId(String id)
     {
-        timeDataRepository.deleteAllBySlideId(id);
+        timeDataRepository.deleteAllBySlideId(UUID.fromString(id));
     }
 }
